--- a/src/config.yml
+++ b/src/config.yml
@@ -1,45 +1,11 @@
 config_version: 1.0
-messages:
-    cantconsole: "&cCan not use this command with the console"
-    noperm: "&cYou haven't got the permission"
-    
-    alertcps_usage: "&cUsage &7» &c/alertcps <on|off>"
-    alertcps_disabled: "&2VerifPlayer &7» &aYou will no longer receive CPS alerts."
-    alertcps_enabled: "&2VerifPlayer &7» &aYou now receive CPS alerts."
-    alertcps_already_disabled: "&2VerifPlayer &7» &cCps alerts are already disabled."
-    alertcps_already_enabled: "&2VerifPlayer &7» &cCps alerts are already enabled."
-    
-    verif_usage: "&cUsage &7» &c/verif <player>"
-    verif_isnotconnected: "&2VerifPlayer &7» &4%player% &cis not connected."
-    verif_sendalert: "&2VerifPlayer &7» &4%player% &c%cps% cps, %ping% ms, %tps% tps."
-    verif_playerdisconnect: "&2VerifPlayer &7» &4%player% &chas disconnected."
-    verif_cantverifyourself: "&2VerifPlayer &7» &4You can't verif yourself."
-    verif_cantverifadmin: "&2VerifPlayer &7» &4You can't verif an Admin."
-    
-    verifgui_name: "&2VerifPlayer ➤ &a%player%"
-    
-    verifgui_info:
-      - ""
-      - "&7Heal: &e%heal%"
-      - "&7Food: &e%food%"
-      - "&7XP Level: &e%xp_level%"
-      - "&7First played: &e%first_played%"
-      - "&7Connected for: &e%last_played%"
-      - ""
-      - "&7In vehicule: &e%vehicule%"
-      - "&7Gui: &e%gui%"
-      
-    verifgui_effect: "&6Effect"
-    verifgui_noeffect: "&cNo Effect"
-    verifgui_noparticle: " &c(&l✖&c particles)&7 "
-    
-    verifgui_cpsitemname: "&6CPS"
-    verifgui_nbalert: "&7Numbers of alert%s%: &e%alert_nb%"
-    verifgui_cpsmax: "&7CPS max: &e%cps_max%"
-    verifgui_cpsformat: "%color%%cpsGlobal% &7cps (%cpsAir% air & %cpsEntity% entity)"
-    
-    verifgui_pingitemname: "&6Ping"
-    verifgui_pingformat: "%color%%ping% &7ms"
-
-    verifgui_tpsitemname: "&6TPS"
-    verifgui_tpsformat: "&7%time%min: %color%%tps%"
+settings:
+    # Choose your language, by default only English (en), French (fr) and German (de) are available. 
+    # To create your own language file (for example in Spanish), create a file named "messages-es.yml" and put "es" below.
+    language: en
+    # Maximum CPS, beyond that, CPSs are not taken into account and an alert message is sent to the moderators (with permission verifplayer.moderator.receivealer) default: 17
+    maxcps: 17
+    # Time in seconds between each CPS alert sent to the moderator. The number of alerts displayed in the Mistletoe is not affected. Default (in seconds): 30 
+    timebetweenalerts: 30
+    # The size of a player's CPS history. The higher this value is, the more RAM it consumes. default: 10
+    sizehistorycps: 10
