--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,8 +1,16 @@
 name: VerifPlayer
 main: fr.tristiisch.verifplayer.Main
 author: Tristiisch
-version: 1.0
+version: 2.0
+description: "The best plugin to destroy autoclick and macro inventory"
+website: "https://goo.gl/nKwUuo"
 commands:
     verifplayer:
+      description: "Allows to reload the configuration with /verifplayer reload"
+      permission: verifplayer.admin
     alertcps:
+      description: "Enables/disables CPS alerts"
+      permission: verifplayer.moderator.command.alertcps
     verif:
+      description: "Allows to see the inventory, CPS... of a player"
+      permission: verifplayer.moderator.command.verif
