--- a/src/messages-de.yml
+++ b/src/messages-de.yml
@@ -20,9 +20,12 @@ messages:
     
     verifgui:
         name: "&2VerifPlayer ➤ &a%player%"
+        
+        # You can use Placeholder
         info:
           - ""
-          - "&7Heal: &e%heal% &c\u2764"
+          - "&7Gruppe: &e%group%"
+          - "&7Heilen: &e%heal%&c\u2764"
           - "&7Lebensmittel: &e%food%"
           - "&7XP Level: &e%xp_level%"
           - "&7Erstmals gespielt: &e%first_played%"
@@ -36,7 +39,8 @@ messages:
         noparticle: " &c(&l✖&c Partikel)&7 "
     
         cpsitemname: "&6CPS"
-        nbalert: "&7Alerts%s%: &e%alert_nb%"
+        nbalert: "&7Alarme: &e%alert_nb%"
+        nbalerts: "&7Alarme: &e%alert_nb%"
         cpsmax: "&7CPS max: &e%cps_max%"
         cpsformat: "%color%%cpsGlobal% &7cps (%cpsAir% air & %cpsEntity% entity)"
         cpsalertformat: "&c%cps% &7cps &4at &c%time%"
