--- a/src/messages-en.yml
+++ b/src/messages-en.yml
@@ -20,9 +20,12 @@ messages:
     
     verifgui:
         name: "&2VerifPlayer ➤ &a%player%"
+        
+        # You can use Placeholder
         info:
           - ""
-          - "&7Heal: &e%heal% &c\u2764"
+          - "&7Groupe: &e%rank%"
+          - "&7Heal: &e%heal%&c\u2764"
           - "&7Food: &e%food%"
           - "&7XP Level: &e%xp_level%"
           - "&7First played: &e%first_played%"
@@ -36,7 +39,8 @@ messages:
         noparticle: " &c(&l✖&c particles)&7 "
     
         cpsitemname: "&6CPS"
-        nbalert: "&7Alerts%s%: &e%alert_nb%"
+        nbalert: "&7Alert: &e%alert_nb%"
+        nbalerts: "&7Alerts: &e%alert_nb%"
         cpsmax: "&7CPS max: &e%cps_max%"
         cpsformat: "%color%%cpsGlobal% &7cps (%cpsAir% air & %cpsEntity% entity)"
         cpsalertformat: "&c%cps% &7cps &4at &c%time%"
@@ -46,6 +50,75 @@ messages:
 
         tpsitemname: "&6TPS"
         tpsformat: "&7%time%min: %color%%tps%"
+        
+    verifspec:
+      teleporter:
+         # item list: https://helpch.at/docs/1.12.2/index.html?org/bukkit/class-use/Material.html
+         item: COMPASS
+         # slot from 0 to 8
+         slot: 0
+         name: "&2Teleporter"
+         lore:
+           - ""
+           - "&7Random teleportation to players"
+      freeze:
+         enable: true
+         item: BLAZE_ROD
+         slot: 1
+         name: "&2Freeze Stick"
+         lore:
+           - ""
+           - "&7Freeze the player you're aiming at"
+      knockback:
+         enable: true
+         item: STICK
+         slot: 2
+         name: "&2Knockback Stick"
+         lore:
+           - ""
+           - "&7Test the knockback of the player you're aiming at"
+      verif:
+         enable: true
+         item: CHEST
+         slot: 3
+         name: "&2Verificator"
+         lore:
+           - ""
+           - "&7Open VerifPlayer Gui for the player you're aiming at"
+      shuttle:
+         enable: true
+         item: MINECART
+         slot: 4
+         name: "&2Shuttle"
+         lore:
+           - ""
+           - "&7Teleport where you aim"
+      slow:
+         enable: true
+         item: FIREWORK_CHARGE
+         slot: 5
+         name: "&2Slow down"
+         lore:
+           - ""
+           - "&7Slows down your speed"
+      fast:
+         enable: true
+         item: LEATHER_BOOTS
+         slot: 6
+         name: "&2Accelerates"
+         lore:
+           - ""
+           - "&7Increases your speed"
+      # add a custom item
+      custom:
+         enable: false
+         item: BARRIER
+         slot: 7
+         name: ""
+         lore:
+           - ""
+           - ""
+    
     time:
        year: "year"
        years: "years"
