--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,24 +1,27 @@
 name: VerifPlayer
-main: fr.tristiisch.verifplayer.Main
+main: fr.tristiisch.verifplayer.VerifPlayer
 author: Tristiisch
-version: 0.2
+version: 2.0
 description: "The best plugin to destroy autoclick and macro inventory"
 website: "https://goo.gl/nKwUuo"
-soft-depend: [GroupManager, PermissionsEx, LuckPerms, PlaceholderAPI]
+soft-depend: [GroupManager, PermissionsEx, LuckPerms, PlaceholderAPI, SuperVanish, PremiumVanish]
+
 commands:
     verifplayer:
       description: "Allows to reload the configuration with /verifplayer reload"
-      permission: verifplayer.admin
+      permission: verifplayer.admin.command.verifplayer
     alertcps:
       description: "Enables/disables CPS alerts"
       permission: verifplayer.moderator.command.alertcps
     verif:
       description: "Allows to see the inventory, CPS... of a player"
       permission: verifplayer.moderator.command.verif
+
     verifspec:
       description: "Allows to verif"
       permission: verifplayer.moderator.command.verifspec
     vanish:
+      aliases: v
       permission: verifplayer.moderator.command.vanish
     freeze:
       permission: verifplayer.moderator.command.freeze
